feat: :sparkles: Add "Geral" tab

--- a/cadastrar.html
+++ b/cadastrar.html
@@ -18,7 +18,7 @@
 
   <!-- NavBar -->
   <nav id="navbar" class="py-2 bg-light">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col">
           <img id="logo" src="img/logo.png" alt="...">
@@ -63,9 +63,9 @@
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
               data-bs-parent="#accordionExample">
               <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action" aria-current="true">
+                <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
                   Cadastrar
-                </button>
+                </a>
               </div>
             </div>
           </div>
@@ -76,7 +76,74 @@
 
     <!-- Page Content -->
     <div class="d-flex flec-column flex-fill">
+      <div class="container-fluid mt-1">
 
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Library</li>
+          </ol>
+        </nav>
+
+        <div class="card">
+          <div class="card-header">
+            <h5 class="card-title">Cadastrar contrato</h5>
+
+          </div>
+          <div class="card-body">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="geral-tab" data-bs-toggle="tab" data-bs-target="#geral"
+                  type="button" role="tab" aria-controls="geral" aria-selected="true">Geral</button>
+              </li>
+            </ul>
+            <div class="tab-content mt-2" id="myTabContent">
+              <div class="tab-pane fade show active" id="geral" role="tabpanel" aria-labelledby="home-tab">
+                <form>
+                  <div class="row g-3">
+
+                    <div class="col">
+                      <label for="numero" class="form-label">Número (nnn/aaaa)</label>
+                      <input type="text" class="form-control" id="numero" disabled>
+                    </div>
+                    <div class="col">
+                      <label for="prestador" class="form-label">Prestador</label>
+                      <input type="text" class="form-control" id="prestador" disabled>
+                    </div>
+                    <div class="col">
+                      <label for="valor" class="form-label">Valor</label>
+                      <input type="number" class="form-control" id="valor" disabled>
+                    </div>
+                  </div>
+
+                  <div class="row g-3">
+
+                    <div class="col">
+                      <label for="inicio_vigencia" class="form-label">Início da vigência</label>
+                      <input type="date" class="form-control" id="inicio_vigencia">
+                    </div>
+                    <div class="col">
+                      <label for="termino_vigencia" class="form-label">Término da vigência</label>
+                      <input type="date" class="form-control" id="termino_vigencia">
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="tab-pane fade" id="itens" role="tabpanel" aria-labelledby="itens-tab">
+
+              </div>
+            </div>
+          </div>
+          <div class="card-footer">
+            <div class="d-flex justify-content-end">
+              <div class="btn-group gap-1" role="group" aria-label="Basic example">
+                <button type="button" class="btn btn-secondary">Voltar</button>
+                <button type="button" class="btn btn-primary">Enviar</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Page Content -->
   </div>
