--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- NavBar -->
   <nav id="navbar" class="py-2 bg-light">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col">
           <img id="logo" src="img/logo.png" alt="...">
@@ -63,9 +63,9 @@
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
               data-bs-parent="#accordionExample">
               <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action" aria-current="true">
+                <a href="cadastrar.html" class="list-group-item list-group-item-action" aria-current="true">
                   Cadastrar
-                </button>
+                </a>
               </div>
             </div>
           </div>
