--- a/cadastrar.html
+++ b/cadastrar.html
@@ -10,6 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+
   <link rel="stylesheet" href="css/style.css">
   <title>Hello, world!</title>
 </head>
@@ -21,22 +23,21 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <img id="logo" src="img/logo.png" alt="...">
+          <div class="d-flex flex-row align-items-center">
+            <img id="logo" src="img/logo.png" alt="Logo da marca">
+            <span class="text-uppercase lead px-1 border-end">Marca</span>
+            <span class="text-bold px-1">Portal teste</span>
+             
+          </div>
         </div>
         <div class="col">
           <div class="d-flex flex-row-reverse bd-highlight mb-3">
             <ul class="nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
+                <a class="nav-link nav-link-text" href="#"><i class="bi bi-gear"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link nav-link-text" href="#">Sair <i class="bi bi-box-arrow-right"></i></a>
               </li>
             </ul>
           </div>
@@ -51,6 +52,9 @@
 
     <!-- SideBar -->
     <ul class="nav flex-column" id="sidebar">
+      <div class="sidebar-heading">
+        Suprimentos
+      </div>
       <li class="nav-item">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
@@ -80,8 +84,8 @@
 
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Library</li>
+            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Cadastrar contrato</li>
           </ol>
         </nav>
 
@@ -96,9 +100,15 @@
                 <button class="nav-link active" id="geral-tab" data-bs-toggle="tab" data-bs-target="#geral"
                   type="button" role="tab" aria-controls="geral" aria-selected="true">Geral</button>
               </li>
+              <li class="nav-item" role="presentation">
+                <button class="nav-link" id="itens-tab" data-bs-toggle="tab" data-bs-target="#itens" type="button"
+                  role="tab" aria-controls="itens" aria-selected="true">Itens</button>
+              </li>
             </ul>
             <div class="tab-content mt-2" id="myTabContent">
-              <div class="tab-pane fade show active" id="geral" role="tabpanel" aria-labelledby="home-tab">
+
+              <!-- Aba Geral -->
+              <div class="tab-pane fade show active" id="geral" role="tabpanel" aria-labelledby="geral-tab">
                 <form>
                   <div class="row g-3">
 
@@ -127,11 +137,76 @@
                       <input type="date" class="form-control" id="termino_vigencia">
                     </div>
                   </div>
+                  <!-- <div class="alert alert-success text-center mt-1" role="alert">
+                    Salvo com sucesso!
+                  </div> -->
                 </form>
               </div>
-              <div class="tab-pane fade" id="itens" role="tabpanel" aria-labelledby="itens-tab">
+              <!-- Aba Geral -->
 
+              <!-- Aba Itens -->
+              <div class="tab-pane fade" id="itens" role="tabpanel" aria-labelledby="itens-tab">
+                <form>
+                  <div class="card">
+                    <div class="card-header">
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex align-items-center">
+                          <h5 class="card-title">
+                            Itens
+                          </h5>
+                        </div>
+                        <button class="btn btn-primary btn-small">
+                          <i class="bi bi-plus-lg"></i>
+                        </button>
+                      </div>
+                    </div>
+                    <div class="card-body">
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Serviço</th>
+                            <th scope="col">Quantidade</th>
+                            <th scope="col">Valor unitário</th>
+                            <th scope="col">Valor total</th>
+                            <th scope="col">Itens</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>1</td>
+                            <td>10,00</td>
+                            <td>10,00</td>
+                            <td>
+                              <!-- Button trigger modal -->
+                              <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal"
+                                data-bs-target="#VisualizarItemModal">
+                                <i class="bi bi-search"></i>
+                              </button>
+                            </td>
+                          </tr>
+                        </tbody>
+                        <tfoot>
+                          <tr>
+                            <th scope="row">
+                              Total
+                            </th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>10,00</td>
+                            <td></td>
+                          </tr>
+                        </tfoot>
+                      </table>
+                    </div>
+                  </div>
+                </form>
               </div>
+              <!-- Aba Itens -->
+
             </div>
           </div>
           <div class="card-footer">
@@ -149,14 +224,40 @@
   </div>
   <!-- Page Wrapper -->
 
+  <!-- Modal Visualizar-->
+  <div class="modal fade" id="VisualizarItemModal" tabindex="-1" aria-labelledby="VisualizarItemModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="VisualizarItemModalLabel">Visualizar item</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <dl>
+            <dt>Número da ordem</dt>
+            <dd>01/2021</dd>
+
+            <dt>Projeto</dt>
+            <dd>Projeto 1</dd>
+            <!-- other terms and definitions -->
+          </dl>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <!-- Optional JavaScript; choose one of the two! -->
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
