--- a/cadastrar.html
+++ b/cadastrar.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
 
   <link rel="stylesheet" href="css/style.css">
-  <title>Hello, world!</title>
+  <title>Portal Teste</title>
 </head>
 
 <body>
