--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+
   <link rel="stylesheet" href="css/style.css">
-  <title>Hello, world!</title>
+  <title>Portal Teste</title>
 </head>
 
 <body>
@@ -21,22 +23,21 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <img id="logo" src="img/logo.png" alt="...">
+          <div class="d-flex flex-row align-items-center">
+            <img id="logo" src="img/logo.png" alt="Logo da marca">
+            <span class="text-uppercase lead px-1 border-end">Marca</span>
+            <span class="text-bold px-1">Portal teste</span>
+             
+          </div>
         </div>
         <div class="col">
           <div class="d-flex flex-row-reverse bd-highlight mb-3">
             <ul class="nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
+                <a class="nav-link nav-link-text" href="#"><i class="bi bi-gear"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link nav-link-text" href="#">Sair <i class="bi bi-box-arrow-right"></i></a>
               </li>
             </ul>
           </div>
@@ -51,6 +52,9 @@
 
     <!-- SideBar -->
     <ul class="nav flex-column" id="sidebar">
+      <div class="sidebar-heading">
+        Suprimentos
+      </div>
       <li class="nav-item">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
@@ -76,7 +80,6 @@
 
     <!-- Page Content -->
     <div class="d-flex flec-column flex-fill">
-
     </div>
     <!-- Page Content -->
   </div>
@@ -88,8 +91,8 @@
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
